# blockchain_rust

./: .env.sample  .gitignore  Cargo.toml  Makefile  database.db
migrations/: 20250106073347_create_block_chains_table.down.sql  20250106073347_create_block_chains_table.up.sql  20250108072328_insert_seed_data.down.sql  20250108072328_insert_seed_data.up.sql
src/: block.rs  block_chain.rs  database.rs  dsa.rs  lib.rs  main.rs  mylib.rs  transaction.rs  wallet.rs  websocket.rs
src/database/: sqlite.rs
src/mylib/: ecdsa.rs  hex.rs
src/transaction/: tx_in.rs  tx_out.rs  unspent_tx_out.rs  upspent_tx_out.rs  utxo.rs
src/websocket/: frame.rs  opcode.rs
